@@ -80,7 +80,7 @@ location = root
 directory = profiles
 directory = corpus
 
-[Author::Plicease::UploadToMatrix]
+[Author::Plicease::Upload]
 [FakeRelease]
 
 
