@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 11;
+use Test::More tests => 10;
 
 use_ok("Dist::Zilla::MintingProfile::Author::Plicease");
 use_ok("Dist::Zilla::Plugin::Author::Plicease::Init");
@@ -10,6 +10,5 @@ use_ok("Dist::Zilla::Plugin::Author::Plicease::PrePodWeaver");
 use_ok("Dist::Zilla::Plugin::Author::Plicease::Tests");
 use_ok("Dist::Zilla::Plugin::Author::Plicease::Thanks");
 use_ok("Dist::Zilla::Plugin::Author::Plicease::TransformTravis");
-use_ok("Dist::Zilla::Plugin::Author::Plicease::UploadToCPAN");
-use_ok("Dist::Zilla::Plugin::Author::Plicease::UploadToMatrix");
+use_ok("Dist::Zilla::Plugin::Author::Plicease::Upload");
 use_ok("Dist::Zilla::PluginBundle::Author::Plicease");
